モバイル時の店舗一覧を非表示に修正

--- a/Casteria.html
+++ b/Casteria.html
@@ -234,57 +234,59 @@
     </div>
 </div>
 
-<div style="margin-top: 40px; margin-bottom: 40px;"></div>
-<div class="container">
-    <div class="row">
-        <div class="fadein">
-            <div class="d-flex justify-content-center">
-                <p class="h4">店舗一覧</p>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-sm-12 col-md-2 d-flex flex-column align-items-center mb-4">
-                    <div class="fixed-ratio-container">
-                        <img src="./img/restaurant2.jpg" class="fixed-ratio-image">
-                    </div>
-                    <p class="text-center mt-2">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
-                        <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
-                      </svg>
-                      東京都渋谷区xxxxx xxxxx
-                    </p>
+<div class="d-none d-md-block d-lg-block">
+    <div style="margin-top: 40px; margin-bottom: 40px;"></div>
+    <div class="container">
+        <div class="row">
+            <div class="fadein">
+                <div class="d-flex justify-content-center">
+                    <p class="h4">店舗一覧</p>
                 </div>
-                <div class="col-sm-12 col-md-2 d-flex flex-column align-items-center mb-4">
-                    <div class="fixed-ratio-container">
-                        <img src="./img/restaurant3.jpg" class="fixed-ratio-image">
+                <div class="row justify-content-center">
+                    <div class="col-sm-12 col-md-2 d-flex flex-column align-items-center mb-4">
+                        <div class="fixed-ratio-container">
+                            <img src="./img/restaurant2.jpg" class="fixed-ratio-image">
+                        </div>
+                        <p class="text-center mt-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                            <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                        </svg>
+                        東京都渋谷区xxxxx xxxxx
+                        </p>
                     </div>
-                    <p class="text-center mt-2">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
-                        <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
-                      </svg>
-                      千葉県松戸市xxxxx xxxxx
-                    </p>
-                </div>
-                <div class="col-sm-12 col-md-2 d-flex flex-column align-items-center mb-4">
-                    <div class="fixed-ratio-container">
-                        <img src="./img/restaurant4.jpg" class="fixed-ratio-image">
+                    <div class="col-sm-12 col-md-2 d-flex flex-column align-items-center mb-4">
+                        <div class="fixed-ratio-container">
+                            <img src="./img/restaurant3.jpg" class="fixed-ratio-image">
+                        </div>
+                        <p class="text-center mt-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                            <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                        </svg>
+                        千葉県松戸市xxxxx xxxxx
+                        </p>
                     </div>
-                    <p class="text-center mt-2">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
-                        <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
-                      </svg>
-                      神奈川県横浜市xxxxx xxxxx
-                    </p>
-                </div>
-                <div class="col-sm-12 col-md-2 d-flex flex-column align-items-center mb-4">
-                    <div class="fixed-ratio-container">
-                        <img src="./img/restaurant5.jpg" class="fixed-ratio-image">
+                    <div class="col-sm-12 col-md-2 d-flex flex-column align-items-center mb-4">
+                        <div class="fixed-ratio-container">
+                            <img src="./img/restaurant4.jpg" class="fixed-ratio-image">
+                        </div>
+                        <p class="text-center mt-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                            <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                        </svg>
+                        神奈川県横浜市xxxxx xxxxx
+                        </p>
                     </div>
-                    <p class="text-center mt-2">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
-                        <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
-                      </svg>
-                      埼玉県川越市xxxxx xxxxx
-                    </p>
+                    <div class="col-sm-12 col-md-2 d-flex flex-column align-items-center mb-4">
+                        <div class="fixed-ratio-container">
+                            <img src="./img/restaurant5.jpg" class="fixed-ratio-image">
+                        </div>
+                        <p class="text-center mt-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                            <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                        </svg>
+                        埼玉県川越市xxxxx xxxxx
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
